[gd_scene load_steps=5 format=3 uid="uid://bi8vgsoslhvrb"]

[ext_resource type="Theme" uid="uid://bcibt73qths3g" path="res://addons/tube/inspector/theme.tres" id="1_5ms28"]
[ext_resource type="Script" uid="uid://chqe7mwhwv255" path="res://addons/tube/inspector/message_control.gd" id="1_gw4sm"]
[ext_resource type="Texture2D" uid="uid://pxj3b3e28fg3" path="res://addons/tube/inspector/icons/clipboard_icon.tres" id="2_78cti"]
[ext_resource type="Texture2D" uid="uid://c141mpg6pwbt8" path="res://addons/tube/inspector/icons/sent_icon.tres" id="3_qi5c7"]

[node name="MessageControl" type="PanelContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 238.0
grow_vertical = 2
theme = ExtResource("1_5ms28")
theme_type_variation = &"PanelH1Container"
script = ExtResource("1_gw4sm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="TypeTextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2
texture = ExtResource("3_qi5c7")
expand_mode = 1
stretch_mode = 5

[node name="TimeLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"LabelH2"
text = "00:00:00"
vertical_alignment = 1

[node name="FromLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_type_variation = &"LabelH2"
text = "00"
vertical_alignment = 1

[node name="ClipboardButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Copy message to clipboard"
theme_type_variation = &"ButtonFlat"
icon = ExtResource("2_78cti")
icon_alignment = 1
expand_icon = true

[node name="MessageCodeEdit" type="CodeEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
virtual_keyboard_show_on_focus = false
wrap_mode = 1
highlight_all_occurrences = true
gutters_draw_line_numbers = true
auto_brace_completion_highlight_matching = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ClipboardButton" to="." method="_on_clipboard_button_pressed"]
